--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tailwind build src/styles.css -o public/styles.css"
+    "build": "tailwind build src/styles.css -o public/styles.css",
+    "otherbuild": "tailwind build src/styles2.css -o public/styles2.css"
   },
   "keywords": [],
   "author": "",
